FlightPath 6.x Changelog
========================

2022-01-01
  Added new base_url() function.
  
  Created new concept of "public files" which users may upload to a special directory under /custom/files/content_uploads/public_uploads.  This screen is on a subtab
  from the normal Content screen, and allows users to upload and delete files (with allowed extensions) for use outside of FlightPath, or when linking
  to CSS or other files from within settings.
  

2021-12-30
  Added new indexes to watchdog table for faster reporting.
  
  Fixed typo in descriptions in encryption module.

  Updated cli.php to also allow db updates from the command line, as well as display help if no arguments
  are sent, or if ?, -h, --help, or help or sent.
  

2021-12-29
  Added more permissions and security checks when accessing files and content, especially of the user is a student and just trying out
  URLs.  We make sure they do not have access to any content, comments, or files they aren't supposed to see.  
  
  Added icon for encryption module, removed old, unused settings from hook_menu items throughout FlightPath.
  

2021-12-28
  Adding new module to core: encryption, and setting up key variable in settings.php on installation (giving it a random string value at the time of
  installation).
  
  Adding ability to save all content files as encrypted, and properly decrypt them for end user, based on if the user has permission to view
  the original content it was attached to.
  

2021-12-27
  Adding ability to have encrypted files for content_files.  Also, that table tells which piece of content the file belongs to, if any.
  
  Made it so if $content->title is unset, false, or null, then on save we give a simple default value.  This is to stop of mysql integrity
  constraint where the title cannot be null.

  Altered engagements so that received files (via email or SMS) go to temp directory on server first, before we then attach them to a piece